fix 1px gap above reading progress bar on Safari

--- a/user/themes/longread/scss/reading-progress.scss
+++ b/user/themes/longread/scss/reading-progress.scss
@@ -18,7 +18,7 @@ $red: #E00000;
 
     /* Dimensions */
     width: 100%;
-    height: 3px;
+    height: 4px;
 
     /* Reset the appearance */
     -webkit-appearance: none;
